--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "util/color-control"]
 	path = util/color-control
 	url = git@github.com:EssentialBlocks/color-control.git
+[submodule "util/gradient-color-controller"]
+	path = util/gradient-color-controller
+	url = git@github.com:EssentialBlocks/gradient-color-controller.git
