--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "util/image-avatar"]
 	path = util/image-avatar
 	url = git@github.com:EssentialBlocks/image-avatar.git
+[submodule "util/toggle-button"]
+	path = util/toggle-button
+	url = git@github.com:EssentialBlocks/toggle-button.git
