--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "infobox",
-	"version": "0.1.0",
-	"description": "Example block written with ESNext standard and JSX support – build step required.",
-	"author": "The WordPress Contributors",
-	"license": "GPL-2.0-or-later",
+	"version": "1.0.0",
+	"description": "Highlight Your Key Features & Hold Audience Attention with Info Box Block.",
+	"author": "WPDeveloper",
+	"license": "GPL-3.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
 		"build": "wp-scripts build",
@@ -13,14 +13,17 @@
 		"start": "wp-scripts start",
 		"packages-update": "wp-scripts packages-update"
 	},
-	"devDependencies": {
-		"@babel/plugin-proposal-class-properties": "^7.10.4",
-		"@wordpress/scripts": "^12.1.1"
-	},
 	"dependencies": {
+		"@wordpress/block-editor": "^5.3.2",
+		"@wordpress/blocks": "^8.0.2",
+		"@wordpress/i18n": "^3.19.2",
 		"@fonticonpicker/react-fonticonpicker": "^1.2.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2",
 		"react-transition-group": "^4.4.1"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.10.4",
+		"@wordpress/scripts": "^14.1.1"
 	}
 }
