style-handler submodule added

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "util/unit-control"]
 	path = util/unit-control
 	url = git@github.com:EssentialBlocks/unit-control.git
+[submodule "util/style-handler"]
+	path = util/style-handler
+	url = git@github.com:EssentialBlocks/style-handler.git
