--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
 	"name": "infobox",
-	"version": "1.0.0",
+	"version": "0.1.0",
 	"description": "Highlight Your Key Features & Hold Audience Attention with Info Box Block.",
 	"author": "WPDeveloper",
 	"license": "GPL-3.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
 		"build": "wp-scripts build",
-		"format:js": "wp-scripts format-js",
+		"format": "wp-scripts format",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"start": "wp-scripts start",
 		"packages-update": "wp-scripts packages-update"
 	},
 	"dependencies": {
-		"@wordpress/block-editor": "^5.3.2",
-		"@wordpress/blocks": "^8.0.2",
-		"@wordpress/i18n": "^3.19.2",
+		"@wordpress/block-editor": "^5.3.3",
+		"@wordpress/blocks": "^8.0.3",
+		"@wordpress/i18n": "^3.20.0",
 		"@fonticonpicker/react-fonticonpicker": "^1.2.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2",
 		"react-transition-group": "^4.4.1"
 	},
 	"devDependencies": {
-		"@babel/plugin-proposal-class-properties": "^7.10.4",
-		"@wordpress/scripts": "^14.1.1"
+		"@wordpress/scripts": "^15.0.1"
 	}
 }
