--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,18 @@
 [submodule "util/dimensions-control-v2"]
 	path = util/dimensions-control-v2
 	url = git@github.com:EssentialBlocks/dimensions-control-v2.git
+[submodule "util/color-control"]
+	path = util/color-control
+	url = git@github.com:EssentialBlocks/color-control.git
+[submodule "util/gradient-color-controller"]
+	path = util/gradient-color-controller
+	url = git@github.com:EssentialBlocks/gradient-color-controller.git
+[submodule "util/image-avatar"]
+	path = util/image-avatar
+	url = git@github.com:EssentialBlocks/image-avatar.git
+[submodule "util/toggle-button"]
+	path = util/toggle-button
+	url = git@github.com:EssentialBlocks/toggle-button.git
+[submodule "util/unit-control"]
+	path = util/unit-control
+	url = git@github.com:EssentialBlocks/unit-control.git
