--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
 		"packages-update": "wp-scripts packages-update"
 	},
 	"dependencies": {
-		"@wordpress/block-editor": "^5.3.3",
-		"@wordpress/blocks": "^8.0.3",
-		"@wordpress/i18n": "^3.20.0",
 		"@fonticonpicker/react-fonticonpicker": "^1.2.0",
 		"classnames": "^2.2.6",
 		"prop-types": "^15.7.2",
 		"react-transition-group": "^4.4.1"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^15.0.1"
+		"@wordpress/scripts": "^15.0.1",
+		"@wordpress/block-editor": "^5.3.3",
+		"@wordpress/blocks": "^8.0.3",
+		"@wordpress/i18n": "^3.20.0",
+		"node-sass": "^6.0.0",
+		"postcss-loader": "^5.3.0"
 	}
 }
